fix(live-preview): hide collapsed code gutters

--- a/packages/obsidian/src/styles.css
+++ b/packages/obsidian/src/styles.css
@@ -140,6 +140,10 @@ span.shiki-ul {
 	padding-block: 0 !important;
 }
 
+.markdown-source-view.mod-cm6.is-live-preview .cm-lineNumbers .cm-gutterElement[style*='height: 0px'] {
+	visibility: hidden;
+}
+
 .markdown-source-view.mod-cm6.is-live-preview .cm-line.shiki-editing-codeblock-line.shiki-editing-codeblock-line-hidden,
 .markdown-source-view.mod-cm6.is-live-preview .cm-line.shiki-editing-codeblock-fence.shiki-editing-codeblock-line-hidden {
 	color: transparent !important;
